--- a/main/example_glfw_opengl2/example_glfw_opengl2.vcxproj
+++ b/main/example_glfw_opengl2/example_glfw_opengl2.vcxproj
@@ -178,7 +178,7 @@
     <ClInclude Include="..\..\imgui_internal.h" />
     <ClInclude Include="..\..\backends\imgui_impl_glfw.h" />
     <ClInclude Include="..\..\backends\imgui_impl_opengl2.h" />
-    <ClInclude Include="header.h" />
+    <ClInclude Include="common.h" />
     <ClInclude Include="Header\ui.h" />
   </ItemGroup>
   <ItemGroup>
@@ -188,12 +188,7 @@
     <None Include="imgui.ini" />
   </ItemGroup>
   <ItemGroup>
-    <Xsd Include="data.txt">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
-    </Xsd>
+    <Text Include="data.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
